# hermes-plugin-feishu-table-card

./: .gitignore  LICENSE  README.md  __init__.py  patch_feishu_table_card.py  plugin.yaml  pyproject.toml
feishu_table_card/: __init__.py
tests/: __init__.py  test_feishu_table_card.py
